--- a/HW_2.3/Base.lproj/Main.storyboard
+++ b/HW_2.3/Base.lproj/Main.storyboard
@@ -16,14 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aB8-3m-nhN">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aB8-3m-nhN">
                                 <rect key="frame" x="64" y="331.5" width="286" height="88"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4gd-jh-ZmO">
                                         <rect key="frame" x="0.0" y="0.0" width="286" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="9CU-Td-h39"/>
-                                            <constraint firstAttribute="width" constant="286" id="b48-K0-Bog"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="286" id="b48-K0-Bog"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" smartDashesType="no" smartQuotesType="no" textContentType="username"/>
@@ -36,7 +36,7 @@
                                         <rect key="frame" x="0.0" y="54" width="286" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="34" id="kee-Qj-nXe"/>
-                                            <constraint firstAttribute="width" constant="286" id="rsJ-YP-P75"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="286" id="rsJ-YP-P75"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" smartDashesType="no" smartQuotesType="no" textContentType="password"/>
@@ -47,11 +47,11 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ulj-xo-ju9">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ulj-xo-ju9">
                                 <rect key="frame" x="64" y="432" width="286" height="74"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6u1-Ih-JOF">
-                                        <rect key="frame" x="0.0" y="0.0" width="286" height="38.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="286" height="38"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Log In">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
@@ -61,13 +61,13 @@
                                             <segue destination="rcD-J5-FI1" kind="presentation" identifier="segue" id="FqR-h2-IcR"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="VuJ-wa-jhg">
-                                        <rect key="frame" x="0.0" y="46.5" width="286" height="27.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="VuJ-wa-jhg">
+                                        <rect key="frame" x="0.0" y="46" width="286" height="28"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="39D-uM-2O3">
                                                 <rect key="frame" x="0.0" y="0.0" width="136" height="27.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="136" id="eyq-qc-XeC"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="136" id="eyq-qc-XeC"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Forgot username?">
@@ -80,7 +80,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="flc-yu-eHx">
                                                 <rect key="frame" x="150" y="0.0" width="136" height="27.5"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="136" id="H4i-98-5oM"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="136" id="H4i-98-5oM"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Forgot password?">
@@ -101,13 +101,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
-                            <constraint firstItem="Ulj-xo-ju9" firstAttribute="top" secondItem="aB8-3m-nhN" secondAttribute="bottom" constant="12.5" id="BlJ-X1-X5z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aB8-3m-nhN" secondAttribute="trailing" constant="64" id="WzY-K6-fzd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ulj-xo-ju9" secondAttribute="bottom" priority="750" constant="355" id="XEO-sN-BM8"/>
-                            <constraint firstItem="Ulj-xo-ju9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="XSn-lO-XUC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ulj-xo-ju9" secondAttribute="trailing" constant="64" id="by7-wf-usg"/>
-                            <constraint firstItem="aB8-3m-nhN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="hxY-KB-ZPk"/>
-                            <constraint firstItem="aB8-3m-nhN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="750" constant="288" id="ux0-mn-weD"/>
+                            <constraint firstItem="Ulj-xo-ju9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HSd-aG-zPh"/>
+                            <constraint firstItem="Ulj-xo-ju9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="21" id="IZz-gj-VAG"/>
+                            <constraint firstItem="aB8-3m-nhN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RSy-IP-Qfx"/>
+                            <constraint firstItem="aB8-3m-nhN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-72.5" id="zBC-8u-1xw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -128,7 +125,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="hdW-PM-scT">
-                                <rect key="frame" x="20" y="256" width="374" height="354"/>
+                                <rect key="frame" x="20" y="271" width="374" height="354"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTk-s1-PdD">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="84"/>
@@ -148,6 +145,9 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3mf-GE-ORo">
                                         <rect key="frame" x="140" y="315.5" width="94" height="38.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="38.5" id="Yg5-Om-a70"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Log Out">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
@@ -157,20 +157,14 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="354" id="FjC-7Y-LsE"/>
-                                    <constraint firstAttribute="width" constant="374" id="XBk-5q-eDA"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Vks-ht-w8i"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Vks-ht-w8i" firstAttribute="bottom" secondItem="hdW-PM-scT" secondAttribute="bottom" constant="252" id="5gW-cu-lkB"/>
-                            <constraint firstItem="hdW-PM-scT" firstAttribute="leading" secondItem="Vks-ht-w8i" secondAttribute="leading" constant="20" id="MFr-qe-jwF"/>
-                            <constraint firstItem="Y55-yF-pi8" firstAttribute="width" secondItem="uNI-kQ-hJn" secondAttribute="height" multiplier="43:448" id="MaG-OC-6UG"/>
-                            <constraint firstItem="Vks-ht-w8i" firstAttribute="trailing" secondItem="hdW-PM-scT" secondAttribute="trailing" constant="20" id="fjG-On-wYS"/>
-                            <constraint firstItem="hdW-PM-scT" firstAttribute="top" secondItem="Vks-ht-w8i" secondAttribute="top" constant="212" id="x0u-5j-6Ic"/>
+                            <constraint firstItem="hdW-PM-scT" firstAttribute="width" secondItem="uNI-kQ-hJn" secondAttribute="height" multiplier="187:448" id="NfT-6G-Mex"/>
+                            <constraint firstItem="hdW-PM-scT" firstAttribute="centerX" secondItem="uNI-kQ-hJn" secondAttribute="centerX" id="dyA-rI-9Dp"/>
+                            <constraint firstItem="hdW-PM-scT" firstAttribute="centerY" secondItem="uNI-kQ-hJn" secondAttribute="centerY" id="xHO-IB-QMp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ewD-vy-RXi"/>
